--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 .DS_Store
+openelectronics-kf8.epub
+openelectronics.epub
+openelectronics.html
+openelectronics.mobi
+openelectronics.pdf
+openelectronics.pdfmarks
